Line head stroke recognising

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <span id="console"></span>
         <div id="stage"></div>
+		<script type="text/javascript" src="./js/lib/ndollar.js"></script>
         <script type="text/javascript" src="./js/require.js" data-main="js/main"></script>
     </body>
 </html>
