--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html;charset=utf8">
+		<meta http-equiv="Expires" content="0">
+        <meta http-equiv="kiben" content="no-cache">
     </head>
     <body>
         <span id="console"></span>
         <div id="stage"></div>
 		<script type="text/javascript" src="./js/lib/ndollar.js"></script>
-        <script type="text/javascript" src="./js/require.js" data-main="js/main"></script>
+        <script type="text/javascript" src="./js/require.js" data-main="js/main4"></script>
     </body>
 </html>
