--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
         <meta http-equiv="content-type" content="text/html;charset=utf8">
 		<meta http-equiv="Expires" content="0">
         <meta http-equiv="kiben" content="no-cache">
+        <link type="text/css" rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <span id="console"></span>
-        <div id="stage"></div>
+        <div id="stage" class="fixed"></div>
+        <div class="attrPool fixed mask"></div>
+        <div class="methPool fixed mask"></div>
+        <div class="className fixed mask"></div>
+        <script type="text/javascript" src="./js/lib/jquery-1.8.3.min.js"></script>
 		<script type="text/javascript" src="./js/lib/ndollar.js"></script>
         <script type="text/javascript" src="./js/require.js" data-main="js/main4"></script>
     </body>
