Move class divs into one div
Now the stage and the masks of the stage are in one integrated div.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
         <link type="text/css" rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <div id="stage" class="fixed"></div>
-        <div class="attrPool fixed mask"></div>
-        <div class="methPool fixed mask"></div>
-        <div class="className fixed mask"></div>
+        <div class="wmclass-container">
+            <div id="stage" class="fixed"></div>
+            <div class="attrPool fixed mask"></div>
+            <div class="methPool fixed mask"></div>
+            <div class="className fixed mask"></div>
+        </div>
         <script type="text/javascript" src="./js/lib/jquery-1.8.3.min.js"></script>
 		<script type="text/javascript" src="./js/lib/ndollar.js"></script>
         <script type="text/javascript" src="./js/require.js" data-main="js/main4"></script>
