--- a/index.html
+++ b/index.html
@@ -5,16 +5,26 @@
 		<meta http-equiv="Expires" content="0">
         <meta http-equiv="kiben" content="no-cache">
         <link type="text/css" rel="stylesheet" href="css/main.css">
+        <link type="text/css" rel="stylesheet" href="js/lib/bootstrap/css/bootstrap.min.css">
     </head>
     <body>
-        <div class="wmclass-container">
-            <div id="stage" class="fixed"></div>
-            <div class="attrPool fixed mask"></div>
-            <div class="methPool fixed mask"></div>
-            <div class="className fixed mask"></div>
+        <ul class="nav nav-tabs">
+            <li><a href="#wmclass-container" data-toggle="tab">WMClass</a></li>
+            <li><a href="#wmusecase-container" data-toggle="tab">WMUsecase</a></li>
+        </ul>
+        <div class="tab-content">
+            <div id="wmclass-container" class="tab-pane">
+                <div id="stage" class="fixed"></div>
+                <div class="attrPool fixed mask"></div>
+                <div class="methPool fixed mask"></div>
+                <div class="className fixed mask"></div>
+            </div>
+            <div id="wmusecase-container" class="tab-pane"></div>
         </div>
         <script type="text/javascript" src="./js/lib/jquery-1.8.3.min.js"></script>
+        <script type="text/javascript" src="./js/lib/bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="./js/lib/ndollar.js"></script>
+        <!--<script type="text/javascript" src="./js/lib/dojo/dojo.js" data-main="js/main5"></script>-->
         <script type="text/javascript" src="./js/require.js" data-main="js/main5"></script>
     </body>
 </html>
