--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link type="text/css" rel="stylesheet" href="js/lib/bootstrap/css/bootstrap.min.css">
     </head>
     <body>
+        <div class="header-logo"><img src="img/logo2.jpg"></div>
         <ul class="nav nav-tabs">
             <li><a href="#wmclass-container" data-toggle="tab">WMClass</a></li>
             <li><a href="#wmusecase-container" data-toggle="tab">WMUsecase</a></li>
