--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <div id="wmclass-stage" class="fixed"></div>
                 <div class="attrPool fixed mask"></div>
                 <div class="methPool fixed mask"></div>
-                <div class="nameMask fixed mask"></div>
             </div>
             <div id="wmusecase-container" class="tab-pane">
                 <div id="wmusecase-stage" class="fixed"></div>
-                <div class="nameMask fixed mask"></div>
             </div>
+            <div class="relNameMask fixed mask"></div>
+            <div class="nameMask fixed mask"></div>
         </div>
         <script type="text/javascript" src="./js/lib/jquery-1.8.3.min.js"></script>
         <script type="text/javascript" src="./js/lib/bootstrap/js/bootstrap.min.js"></script>
