Changed a smaller logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link type="text/css" rel="stylesheet" href="js/lib/bootstrap/css/bootstrap.min.css">
     </head>
     <body>
-        <div class="header-logo"><img src="img/logo2.jpg"></div>
+        <div class="header-logo"><img src="img/WMLOGO.jpg"></div>
         <ul class="nav nav-tabs">
             <li><a href="#wmclass-container" data-toggle="tab">WMClass</a></li>
             <li><a href="#wmusecase-container" data-toggle="tab">WMUsecase</a></li>
@@ -29,6 +29,6 @@
         <script type="text/javascript" src="./js/lib/bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="./js/lib/ndollar.js"></script>
         <!--<script type="text/javascript" src="./js/lib/dojo/dojo.js" data-main="js/main5"></script>-->
-        <script type="text/javascript" src="./js/require.js" data-main="js/main5"></script>
+        <script type="text/javascript" src="./js/require.js" data-main="js/main6"></script>
     </body>
 </html>
