Packages are now ready to use

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul class="nav nav-tabs">
             <li><a href="#wmclass-container" data-toggle="tab">WMClass</a></li>
             <li><a href="#wmusecase-container" data-toggle="tab">WMUsecase</a></li>
+            <li><a href="#wmpackage-container" data-toggle="tab">WMPackage</a></li>
         </ul>
         <div class="tab-content">
             <div id="wmclass-container" class="tab-pane">
@@ -21,6 +22,9 @@
             </div>
             <div id="wmusecase-container" class="tab-pane">
                 <div id="wmusecase-stage" class="fixed"></div>
+            </div>
+            <div id="wmpackage-container" class="tab-pane">
+                <div id="wmpackage-stage" class="fixed"></div>
             </div>
             <div class="relNameMask fixed mask"></div>
             <div class="nameMask fixed mask"></div>
