WMComponent is now available

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="#wmclass-container" data-toggle="tab">WMClass</a></li>
             <li><a href="#wmusecase-container" data-toggle="tab">WMUsecase</a></li>
             <li><a href="#wmpackage-container" data-toggle="tab">WMPackage</a></li>
+            <li><a href="#wmcomponent-container" data-toggle="tab">WMComponent</a></li>
         </ul>
         <div class="tab-content">
             <div id="wmclass-container" class="tab-pane">
@@ -26,6 +27,9 @@
             <div id="wmpackage-container" class="tab-pane">
                 <div id="wmpackage-stage" class="fixed"></div>
             </div>
+            <div id="wmcomponent-container" class="tab-pane">
+                <div id="wmcomponent-stage" class="fixed"></div>
+            </div>
             <div class="relNameMask fixed mask"></div>
             <div class="nameMask fixed mask"></div>
         </div>
@@ -33,6 +37,6 @@
         <script type="text/javascript" src="./js/lib/bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="./js/lib/ndollar.js"></script>
         <!--<script type="text/javascript" src="./js/lib/dojo/dojo.js" data-main="js/main5"></script>-->
-        <script type="text/javascript" src="./js/require.js" data-main="js/main6"></script>
+        <script type="text/javascript" src="./js/require.js" data-main="js/main7"></script>
     </body>
 </html>
